; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/aic94xx/extr_aic94xx_tmf.c_asd_clear_task_set.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/aic94xx/extr_aic94xx_tmf.c_asd_clear_task_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.domain_device = type { i32 }

@TMF_CLEAR_TASK_SET = common dso_local global i32 0, align 4
@TMF_RESP_FUNC_COMPLETE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @asd_clear_task_set(%struct.domain_device* %0, i32* %1) #0 {
  %3 = alloca %struct.domain_device*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store %struct.domain_device* %0, %struct.domain_device** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load %struct.domain_device*, %struct.domain_device** %3, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = load i32, i32* @TMF_CLEAR_TASK_SET, align 4
  %9 = call i32 @asd_initiate_ssp_tmf(%struct.domain_device* %6, i32* %7, i32 %8, i32 0)
  store i32 %9, i32* %5, align 4
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* @TMF_RESP_FUNC_COMPLETE, align 4
  %12 = icmp eq i32 %10, %11
  br i1 %12, label %13, label %17

13:                                               ; preds = %2
  %14 = load %struct.domain_device*, %struct.domain_device** %3, align 8
  %15 = load i32*, i32** %4, align 8
  %16 = call i32 @asd_clear_nexus_I_T_L(%struct.domain_device* %14, i32* %15)
  br label %17

17:                                               ; preds = %13, %2
  %18 = load i32, i32* %5, align 4
  ret i32 %18
}

declare dso_local i32 @asd_initiate_ssp_tmf(%struct.domain_device*, i32*, i32, i32) #1

declare dso_local i32 @asd_clear_nexus_I_T_L(%struct.domain_device*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
